tests/c/internal/verify_case/verify_empty_initializer.c
// Verify mode: empty initializer produces a diagnostic.

void f(void) {
    int x = ; // expected-error {{unexpected token in expression}}
}
